--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "KotlinApkTemplate"
+rootProject.name = "Scuzero"
 include ':app'
