--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <!-- Device Policy Manager -->
   <uses-permission android:name="android.permission.BIND_DEVICE_ADMIN" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
   <application
     android:allowBackup="true"
@@ -23,7 +24,6 @@
 
     </activity>
 
-    <!-- Device Admin Receiver -->
     <receiver
       android:name=".MyDeviceAdminReceiver"
       android:permission="android.permission.BIND_DEVICE_ADMIN"
@@ -35,6 +35,8 @@
         <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
       </intent-filter>
     </receiver>
+
+    <service android:name=".CameraLockService" />
 
   </application>
 
